--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Vue</title>
   </head>
   <body>
-    <content id="app" class="container"></content>
+    <div id="app" class="container"></content>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
