Added copy script btn

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Vite + Vue</title>
   </head>
   <body>
+    <div class="d-flex justify-content-center bg-primary">
+      <img src="./images/logo.png" alt="" height="50" width="50">
+      <p class="text-white mt-3 mx-4">Ultimate Outlander: Price Manager</p>
+      <img src="./images/logo.png" alt="" height="50" width="50">
+    </div>
     <div id="app" class="container"></content>
     <script type="module" src="/src/main.js"></script>
   </body>
