--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Ultimate Outlander: Container Catalog and Vendor Stock</title>
   </head>
   <body>
     <div class="d-flex justify-content-center bg-primary">
       <img src="./images/logo.png" alt="" height="50" width="50">
-      <p class="text-white mt-3 mx-4">Ultimate Outlander: Price Manager</p>
+      <p class="text-white mt-3 mx-4">Ultimate Outlander: Container Catalog and Vendor Stock</p>
       <img src="./images/logo.png" alt="" height="50" width="50">
     </div>
     <div id="app" class="container"></content>
+
+    <footer>
+      <div class="d-flex justify-content-center bg-primary text-white p-2">
+        <p>
+    </footer>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
