--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <h6 class="d-md-none text-center mt-4 font-cinzel">Container Catalog and Vendor Stock Script Generator</h6>
       </div>
       <div class=" align-self-center mt-3">
-        <a href="https://www.buymeacoffee.com/grantpie" target="_blank">
+        <!--<a href="https://www.buymeacoffee.com/grantpie" target="_blank">
           <img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" 
               alt="Buy Me A Coffee" 
               height="40">
-        </a>
+        </a>-->
       </div>
       
 
@@ -50,13 +50,12 @@
     </div>
     <content id="app" class="container"></content>
 
-    <footer
-    class="bg-secondary p-4 d-flex flex-column align-items-center">
-      <p>Keep Ultimate Outlander Online:</p>
-      <a href="https://www.buymeacoffee.com/grantpie" target="_blank">
-        <img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" 
-            alt="Buy Me A Coffee" 
-            height="40">
+    <footer class="bg-secondary p-4 d-flex flex-column align-items-center">
+      <p class="mt-3 mb-2">Report bugs or suggest features:</p>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHA0MQNYDlRaNXR8a14JTORDTNPh4gpyvTEaX-JiSvJ372eA/viewform"  
+        target="_blank" 
+        class="btn btn-primary ">
+        Submit Feedback
       </a>
     </footer>
     <script type="module" src="/src/main.js"></script>
