--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultimate Outlander</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,6 @@
     <style>
     .font-cinzel {
       font-family: "Cinzel", serif;
-      font-optical-sizing: auto;
       font-weight: 400;
       font-style: normal;
     }
@@ -48,7 +47,7 @@
 
 
     </div>
-    <content id="app" class="container"></content>
+    <div id="app" class="container"></div>
 
     <footer class="bg-secondary p-4 d-flex flex-column align-items-center">
       <p class="mt-3 mb-2">Report bugs or suggest features:</p>
