More SEO changes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ultimate Outlander - UO Outlands Vendor & Container Catalog Tool | Razor Script Generator</title>
-    <meta name="description" content="Free tool for Ultima Online Outlands players to catalog container items and generate vendor stock scripts. Automate pricing for phylacteries, aspect cores, skill scrolls, maps, and equipment with Razor script integration.">
+    <title>Ultimate Outlander - UO Outlands Vendor Script Generator</title>
+    <meta name="description" content="Free tool to catalog items and generate vendor stock scripts for Ultima Online Outlands with Razor integration.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
@@ -43,9 +43,8 @@
         <div class="d-flex flex-md-column align-items-center">
 
             <img class="d-md-none" src="images/logo.png" alt="logo" height="125">
-            <h1 class="text-white mt-3 mx-4 font-cinzel">Ultimate Outlander</h1>
+            <h1 class="text-white mt-3 mx-4 font-cinzel">Ultimate Outlander Vendor Tool</h1>
             <h6 class="d-none d-md-block text-center mt-4 font-cinzel">Container Catalog and Vendor Stock Script Generator</h6>
-            
 
             <a href="#step-3" class="skip-link">Skip to import.</a>
    
